[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfy-image-switch"
version = "1.0.0"
description = "An image source switch node for ComfyUI"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch",
    "torchvision",
]

[project.urls]
Homepage = "https://github.com/yourusername/comfy-image-switch"
Issues = "https://github.com/yourusername/comfy-image-switch/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*"]
